FIX: fixed unnecesary scroll on iOS 26

--- a/src/index.css
+++ b/src/index.css
@@ -211,6 +211,8 @@ body {
   min-width: 320px;
   height: 100vh;
   overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
 
 h1 {
